@@ -561,6 +561,9 @@ node_types:
       disk_size:
         type: integer
         required: false
+      cdrom_image:
+        type: string
+        required: false
       connection_config:
         default: {}
         type: cloudify.datatypes.vsphere.Config
